<package>
	<name>lms1</name>
	<version>0.0.0</version>
	<description>
	lms511 driver, this program will sample data from the left lms511 (IP: 192.168.200.31);
	</description>
	<maintainer email="chen0510566@163.com">Chen Cheng</maintainer>
	<license>BSD</license>
	<author>Chen Cheng</author>
	<buildtool_depend>catkin</buildtool_depend>
</package>
