<package>
	<name>velodyne0</name>
	<version>0.0.0</version>
	<description>
	velodyne hdl-32e driver, this program will sample data from the velodyne-0, the center velodyne (IP: 192.168.200.50) by port 2360.
	</description>
	<maintainer email="chen0510566@163.com">Chen Cheng</maintainer>
	<license>BSD</license>
	<author>Chen Cheng</author>
	<buildtool_depend>catkin</buildtool_depend>
</package>
