<package>
	<name>velodyne1_to_pc</name>
	<version>0.0.0</version>
	<description>
	velodyne hdl-32e projector, this program will transform velodyne data to world frame and publish point cloud.
	</description>
	<maintainer email="chen0510566@163.com">Chen Cheng</maintainer>
	<license>BSD</license>
	<author>Chen Cheng</author>
	<buildtool_depend>catkin</buildtool_depend>
</package>
